--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <!-- link pra imagem de icon -->
     <link rel="icon" href="./imagens/musica.png">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- link google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,6 +23,10 @@
     <header>
         <div class="logo">
             <h1><span class="txt_fecaf">FECAF</span>MUSIC</h1>
+        </div>
+
+        <div class="list">
+            <i class="bi bi-list"></i>
         </div>
 
         <nav>
